--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_URL=redis://localhost:6379
 
-JWT_SECRET=top_secret
+JWT_SECRET=top_secrettop_secrettop_secret
+
+CRYPTO_SECRET=top_secrettop_secrettop_secrettop_secrettop_secrettop_secret
 
 DATABASE_URL=postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public
