--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.2.0",
+    "@types/cryptr": "^4.0.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cryptr": "^6.2.0",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.3.0",
     "prisma": "^5.2.0",
