--- a/.env.test
+++ b/.env.test
@@ -8,6 +8,8 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_URL=redis://localhost:6379
 
-JWT_SECRET=top_secret
+JWT_SECRET=7AB931F072CBA2237DE1B63E868768E3
+
+CRYPTO_SECRET=top_secrettop_secrettop_secrettop_secrettop_secrettop_secret
 
 DATABASE_URL=postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public
