--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "npm run prisma:prod && npm run prisma:prod:seed && node dist/main",
+    "start:prod": "npm run prisma:prod && npm run prisma:prod:seed && node dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -42,7 +42,8 @@
     "dotenv-cli": "^7.3.0",
     "prisma": "^5.2.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-themes": "^1.2.30"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
